deploy/eks_manifest/app/deployment.yml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: iris-web
  name: iris-app-deployment
  labels:
    site: iris
    app: iris-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iris-app
  template:
    metadata:
      labels:
        app: iris-app
    spec:
      containers:
      - name: iris-app
        image: iriswebapp_app:v2.2.2
        ports:
        - containerPort: 8000
        command: ['nohup', './iris-entrypoint.sh', 'iriswebapp'] 
        volumeMounts:
        - name: iris-pcv
          mountPath: /home/iris/downloads
          subPath: downloads
        - name: iris-pcv
          mountPath: /home/iris/user_templates
          subPath: user_templates
        - name: iris-pcv
          mountPath: /home/iris/server_data
          subPath: server_data
      volumes:
      - name: iris-pcv
        persistentVolumeClaim:
          claimName: iris-psql-claim
